css/main.css
/* ... */
#faq {
  padding-bottom: 20px;
  padding-top: 20px;
}

#faq .section-name {
  color: #fff;
  text-align: center;
  margin-bottom: 20px;
}

#faq .container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  column-gap: 70px;
}

#faq .card button {
  position: relative;
  top: -4px;
}

#faq button,
.card-body {
  color: white;
  text-align: left;
}

#faq button {
  padding: 0;
}

#faq .card {
  background-color: #fc7361;
  margin-bottom: 30px;
  border-radius: 15px;
}

#title-all{
  align-items: center;
}

/*FOOTER*/
footer {
  padding-top: 30px;
  padding-bottom: 30px;
  background-color: #fc7361;
  color: #fff;
}

footer .container {
  display: grid;
  grid-template-columns: 70% 30%;
  column-gap: 10px;
}

.unround-card .card-header {
  border-radius: 0px;
}

footer a {
  color: white;
  text-decoration: underline;
}

#footer-social img {
  width: 30px;
  height: 30px;
}

#footer-social {
  text-align: left;
  padding-top: 10px;
  margin-right: 10px;
}

footer p {
  margin-bottom: 5px;
}

#ttsbyte-img {
  width: 100%;
  height: 100%;
}

#footer-right {
  text-align: right;
}

#seattle-skyline-footer {
  width: 100%;
}
/* CHALLENGE THEME */
.card-block .btn-outline-primary {
    width: 100%;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    bottom: 0;
    left: 0;
    position: absolute;
}

.card {
    margin: 20px 0;
    justify-content:center;
}

/* Flip Cards CSS */
.card-container {
    perspective: 700px;
}

.card-flip {
    position: relative;
    width: 100%;
    transform-style: preserve-3d;
    height: auto;
    /*transition: all 0.5s ease-out;*/
    background: white;
    border: none;
    transition: transform 1s;
    
}

    .card-flip div {
        backface-visibility: hidden;
        transform-style: preserve-3d;
        height: 100%;
        width: 100%;
        border: none;
    }

    .card-flip .front {
        position: relative;
        z-index: 1;
        justify-content: center;
        backface-visibility: hidden;
    }

    .card-flip .back {
        position: relative;
        z-index: 0;
        transform: rotateY(180deg);
        padding: 5%;
        backface-visibility: hidden;
    }
    .back{
        padding:12px;
    }

.card-container:hover .card-flip {
    transform: rotateY(180deg);
   
}
.card card-flip .is-flipped {
    transform: rotateY(180deg);
}
/*FAQ 2*/
/*
#faqs .section-name{
	border-top: 4px solid #fff;
    border-right: 4px solid #fff;
	border-left: 4px solid #fff;
	border-bottom: 4px solid #fff;

	width: 10%;
	height: 40%;
	padding-bottom: 5px;
	margin: 0 auto;
}

#vert-line-below-faqs{
	content: "";
	display: block;
	position: relative;

	width: 0.5px;
	height: 20px;

	border-left: 4px solid #fff;
	margin: 0 auto;
	top: 0.1px;
}

#faqs .line{
    display: block;
	position: relative;
	
    width: 50%;
	height: 20px;
	
    border-top: 4px solid #fff;
    border-right: 4px solid #fff;
    border-left: 4px solid #fff;
	margin: 0 auto;
	
	top: 0.001px;
	bottom: -30px;
	z-index: 1;
}

#faqs .line-between-cards{
	content: "";
	display: block;
	position: relative;

	width: 0.5px;
	height: 20px;

	border-left: 4px solid #fff;
	margin: 0 auto;
	left: -15%;
}

@media only screen and (max-width: 1000px) {
  .video,
  .img-recruit {
    display: none;
  }

	.page-section {
		padding: 3rem 0px;
	}
	
}
*/
@media only screen and (max-width: 1000px) {
    .video, .img-recruit {
    display: none;
  }

  .page-section {
    padding: 3rem 0px;
  }
}

@media only screen and (max-width: 768px) {
  /*When image becomes squished*/
  #footer-right {
    display: none;
  }
}

@media only screen and (max-width: 600px) {
  .video,
  .img-recruit {
    display: none;
  }

  .page-section {
    padding: 2rem 0px;
  }

  h1#header-title {
    font-size: 70px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .ytp-cued-thumbnail-overlay-image {
    padding-top: 30px;
    margin-top: 30px;
  }

  section#organize {
    margin: 0px 20px 0px 20px;
  }

  section#sponsor {
    margin: 0px 20px 0px 20px;
  }

  #faq .container {
    display: grid;
    grid-template-columns: 1fr;
  }
}

@media only screen and (max-width: 768px) {
  /*When image becomes squished*/
  #footer-right {
    display: none;
  }
  header.masthead {
    background-image: none;
    height: 100%;
  }
    
}

@media only screen and (max-width: 600px) {
  .video,
  .img-recruit {
    display: none;
  }

  .page-section {
    padding: 2rem 0px;
  }
  body {
    padding-top: -300px;
  }

  h1#header-title {
    font-size: 70px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .ytp-cued-thumbnail-overlay-image {
    padding-top: 30px;
    margin-top: 30px;
  }

  section#organize {
    margin: 0px 20px 0px 20px;
  }

  section#sponsor {
    margin: 0px 20px 0px 20px;
  }

  #faq .container {
    display: grid;
    grid-template-columns: 1fr;
  }

  .row1 {
    /*padding: 2rem 0px;
        display: inline-block;
        position: relative;
        border: none;
        width: 100%;
        position: relative;
        margin: 1rem 0 1.5rem 0*/
    display: block;
    width: 100%;
    margin-left: auto;
    margin-right: 25px;
    text-align: center;
    justify-content: center;
    margin-bottom: 3%;
  }
    #first-card, #second-card, #third-card, #fourth-card {
        border-top-style: none;
        border-bottom-style: none;
    }

  .ml-form-align-center {
    display: block;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
   height:auto;
    margin-top: auto;

  /*header.masthead {
        background-image: none;
        height: 100%;
        display: block;
        width: 100%;
    }*/
  }
}



#card3, #card8, #card10, #card13, #card19 {
    border-left: 10px solid #40bb53;
}
/* ... */

